embassy-executor/tests/ui/nonstatic_ref_anon.stderr
error: Arguments for tasks must live forever. Try using the `'static` lifetime.
 --> tests/ui/nonstatic_ref_anon.rs:4:19
  |
4 | async fn foo(_x: &'_ u32) {}
  |                   ^^
